compilador/test_programs/invalid/02_undeclared_variable.patito
programa undeclared_var;
vars:
    x: entero;

inicio {
    x = 5;
    y = 10;
    escribe(y);
}
fin
